--- a/小红书运营.md
+++ b/小红书运营.md
@@ -23,3 +23,6 @@
 小红书的流量机制是这样，像过关斩将一样，它首先向一定数量的人推送这个帖子，比如一百个人，如果用户点赞的数量和评论的数量达到一定的比例，比如百分之 10，小红书便会把这个帖子继续推送给更多的人，比如 1000，如果推送的结果再次达到某个比例，继续推送到更多更多的人，以此类推。因此一个帖子是否会火从它发出去的一天内用户互动数便能看得到结果，以之前的经验看来，如果于都量跟互动数达到了 10-20% 的比例，这个帖子的数据就不会太差。
 ## 分析访问者偏好
 搜索关键字，分析同类主题帖，看点赞数量多的视频共同特征是什么，了解大众喜好倾向，比如我输入「发色」关键字大致浏览了一下，发现高赞帖中冷棕亚麻色占据了绝大部分，以此可以分析出大众的普遍喜好，在我个人角度看来，大部分人都不会选择很夸张的颜色，因此这类看起来很低调的颜色会受到很多人的喜爱
+
+## 发帖时间
+最好选择节假日开始前的下午 4-6 点开始发，比如周五下午等
